🚧 Add scheduler tool